fix bug, edit main header z-index

--- a/style.css
+++ b/style.css
@@ -356,6 +356,8 @@ h1.banner__heading {
     background-color: white;
     bottom: auto;
     padding: 3.6rem 0;
+    position: relative;
+    z-index: 2;
 }
 
 .header-row,
